# respadon-datasprint-2022

./: .gitignore  package-lock.json  package.json
communautes_politiques/data/: evolution_formes.csv  melenchon_2012.csv  melenchon_2012.gexf  melenchon_2012_acteur.gexf  melenchon_2012_acteurs.gexf  melenchon_2017.csv  melenchon_2017.gexf  melenchon_2017_acteurs.gexf  melenchon_2017_forme.gexf  melenchon_2022.csv  melenchon_2022.gexf  melenchon_2022_acteurs.gexf  melenchon_2022_forme.gexf  mergedGraph.gexf  mergedGraphSpatialized.gexf  metrics.csv  triptyque_2012_to_2017.gexf  triptyque_2012_to_2017_noverlapped.gexf  triptyque_2017_to_2022.gexf  (+1 more)
covid/: example.js  keywords.py  url-dict.py
covid/hyphe_corpus_script/: .gitignore  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
covid/hyphe_corpus_script/data/: datasprint_other_urls.csv  datasprint_urls.csv  platform_rules.csv
covid/hyphe_corpus_script/results/: problematic_urls.txt
covid/hyphe_corpus_script/src/: config.py  configure_logging.py  hyphe.py  loaders.py  lru_converter.py  structures.py
critique_theatrale/: dedup-bnf-sources.py  requirements.txt
genome/: domaine_theme.tags.csv  domaine_theme_viz.csv  domaine_themes.gephi  domaine_themes.gexf  election2002.gexf  elections2002.gephi  elections_top10.csv  export_domaine_theme_viz.py  genome_election_nlp.py  genome_incunable_nlp.py  hyphe_corpus_content_solr_queries.py  hyphe_corpus_themes_solr_queries.py  nodes.csv  requirements.txt  tag_webentity_with_bcweb.py  themes.py  treat_theme_by_domaine.py  treat_themes_by_webentities.py
(+8683 files in other folders)
